# playground

./: .gitignore  README.md
.devcontainer/: devcontainer.json
coding-challenges-fyi/: README.md
exchange-order-books/: README.md
naivecoin/: package-lock.json  package.json
naivecoin/src/: block.ts
php/laravel/chirper/app/Http/Controllers/: ChirpController.php
php/laravel/chirper/resources/js/Components/: Chirp.jsx
php/laravel/chirper/resources/js/Layouts/: AuthenticatedLayout.jsx
rust/: flake.nix  shell.nix
rust-cli/grrs/: Cargo.toml
rust-cli/grrs/src/: main.rs
rust/rust-cli/: README.md
rust/rust-cli/grrs/: Cargo.toml  README.md  flake.nix
rust/rust-cli/grrs/.direnv/: flake-profile-1-link
rust/rust-cli/grrs/src/: lib.rs  main.rs
rust/rust-cli/grrs/tests/: test.rs
sql/a-curious-moon/: Dockerfile  build.sql  docker-compose.yml  flake.nix  shell.nix
sql/a-curious-moon/curious_data/code/01-enceladus_db/scripts/: import.sql
sql/a-curious-moon/curious_data/code/02-normalize/scripts/: import.sql
sql/a-curious-moon/curious_data/code/06-ring_dust/: 03-import_cda.sql  04-speed_calcs.sql
sql/a-curious-moon/curious_data/code/07-gravity_assist/: 04-eno_help.sql  05-a_new_hope.sql
sql/a-curious-moon/curious_data/code/08-under_ice/: 04-analysis.sql  05-chem_query.sql
zod/: README.md  bun.lockb  index.js  index.ts  package.json
