[package]
name = "portothree-playground-grrs"
version = "0.1.0"
edition = "2021"
authors = ["Gustavo Porto <gus@p8s.co>"]
description = "A tool to search files"
readme = "README.md"
keywords = ["search", "files", "grep", "cli"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
log = "0.4.21"
spinners = "4.1.1"
